# ringmin

./: .gitignore  CITATION.cff  ENDORSEMENT_SUMMARY.md  README.md  REPORT.md  SPIEGAMI.md  SUBMISSION_CHECKLIST.md  SUBMISSION_REVIEW_REPORT.md  compile_pdf.py  pyproject.toml  requirements.txt  spiegami.tex  verify.py
.github/workflows/: ci.yml
endorsement/: email_templates.md
paper_assets/: appendix_tables.tex  asymptotic_fit.csv  free_float_criterion_n14_20.csv  heuristic_n14_18.csv  highprec.csv  patterns_table.csv  pocket_definition_audit_n14.json  ringmin_paper.aux  ringmin_paper.out  ringmin_paper.tex  ringmin_v4.tex
results/: float64_calibration.csv  free_float_criterion_n14_20.csv  heuristic_confidence_n16_18.csv  heuristic_n14_18.csv  patterns_table.csv  regimes.csv  subset_comparison.csv  supnick_validity.json
results/frontiers/: n03_frontier.json  n04_frontier.json  n05_frontier.json  n06_frontier.json  n07_frontier.json  n08_frontier.json  n09_frontier.json  n10_frontier.json  n11_frontier.json  n12_frontier.json  n13_frontier.json  n14_frontier.json  summary.csv
results/n03/: optimum.json  (+1 more)
scripts/: asymptotic_fit.py  audit_m2.py  audit_n8_pocket.py  build_report.py  calibrate_float64.py  confidence_boost.py  export_paper_assets.py  extract_frontiers.py  free_float_criterion.py  generate_figures.py  heuristic_sweep.py  highprec_verify.py  m2_summary.py  patterns_table.py  pocket_definition_audit.py  refresh_heuristic_artifacts.py  start_detached_sweep.ps1  subset_comparison.py  supnick_validity.py  sweep_certified.py
tests/: test_m0.py  test_m1.py
(+46 files in other folders)
